logs/ec.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ec'...
Compiling './lib/python3.5/site-packages/ec/__main__.py'...
***   File "./lib/python3.5/site-packages/ec/__main__.py", line 51
    print 'Usage:\n\t$ ec (script / dir) [flag] [command] [args]'
                                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ec/modules'...
Compiling './lib/python3.5/site-packages/ec/modules/dispatch.py'...
***   File "./lib/python3.5/site-packages/ec/modules/dispatch.py", line 19
    print help_text
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ec/modules/helper_tasks.py'...
***   File "./lib/python3.5/site-packages/ec/modules/helper_tasks.py", line 35
    print '\n%s' % help_text
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ec/modules/shell.py'...
***   File "./lib/python3.5/site-packages/ec/modules/shell.py", line 20
    print '' if result is None else '%s\n' % str(result)
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ec/types'...
Listing './lib/python3.5/site-packages/ec-0.2.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
